# prison-manager-test-

./: README.md  gdg  nice  teste
FirstProject/: CMakeLists.txt  main.cpp
FirstProject/headers/: dinamicpl3.h  factorial.h  pl1.h  pl2.h  pl3.h  pl4.h  pl7.h
FirstProject/sources/: dinamicpl3.cpp  factorial.cpp  pl1.cpp  pl2.cpp  pl3.cpp  pl4.cpp  pl7.cpp  test_pl2.cpp  test_pl3.cpp  test_pl4.cpp
